--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation "com.android.billingclient:billing:4.1.0"
 
 }
